Removed job container

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,12 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    container: 
-      image: petervaczi/antlr:latest
-    
+
     steps:
       - name: Clone repo
         uses: actions/checkout@v1.1.0
       
       - name: Build lexer and parser
-        run: |
-          cd ${GITHUB_WORKSPACE}/src/grammar
-          make
+        uses: actions/build-action
+        with:
+          args: "-f "
