--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
         uses: actions/checkout@v1.1.0
       
       - name: Build lexer and parser
-        uses: actions/build-action
+        uses: actions/build-action@v1
         with:
           args: "-f "
