--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/checkout@v1.1.0
       
       - name: Build lexer and parser
-        uses: ./.github/actions/build-action@v1     
+        uses: ./.github/actions/build-action     
