Fixing broken Dockerfile

--- a/.github/actions/build-action/Dockerfile
+++ b/.github/actions/build-action/Dockerfile
@@ -5,7 +5,7 @@ ENV ANTLR_VERSION=4.7.2
 ENV CLASSPAHT .:/antlr-${ANTLR_VERSION}-complete.jar
 
 RUN apk update && \
-    apk-add make
+    apk add make
 
 ADD https://www.antlr.org/download/antlr-${ANTLR_VERSION}-complete.jar /
 RUN chmod +r /antlr-${ANTLR_VERSION}-complete.jar
