--- a/.github/actions/build-action/Dockerfile
+++ b/.github/actions/build-action/Dockerfile
@@ -2,13 +2,15 @@ FROM anapsix/alpine-java:8
 LABEL maintainer="Andrei Gherasim <andrei@gherasim.xyz>"
 
 ENV ANTLR_VERSION=4.7.2
-ENV CLASSPAHT .:/antlr-${ANTLR_VERSION}-complete.jar
+ENV CLASSPATH .:/antlr-${ANTLR_VERSION}-complete.jar:$CLASSPATH
 
 RUN apk update && \
     apk add make
 
 ADD https://www.antlr.org/download/antlr-${ANTLR_VERSION}-complete.jar /
-RUN chmod +r /antlr-${ANTLR_VERSION}-complete.jar
+RUN chmod +r /antlr-${ANTLR_VERSION}-complete.jar && \
+    ln -s /antlr-${ANTLR_VERSION}-complete.jar /usr/bin/antlr && \
+    chmod +x /usr/bin/antlr
 
 COPY entrypoint.sh /entrypoint.sh
 
